<resources>
    <string name="app_name">OpenBookLikes</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>



    <string name="followings">Followings</string>
    <string name="followers">Followers</string>
    <string name="books">Books</string>

    <string name="option_view_grid">Switch to Grid</string>
    <string name="option_view_list">Switch to List</string>
    <string name="reload">Reload</string>

    <string name="option_browser">Open in Browser</string>
    <string name="option_share">Share</string>

    <string name="menu_logout">Logout</string>
    <string name="confirm_logout">Really logout?</string>
    <string name="search">Search</string>
    <string name="empty">Nothing to show</string>



    <string name="book_format">Format</string>
    <string name="book_isbn_10">ISBN-10</string>
    <string name="book_isbn_13">ISBN-13</string>
    <string name="book_publish_date">Publish date</string>
    <string name="book_publisher">Publisher</string>
    <string name="book_pages">Pages no</string>
    <string name="book_language">Language</string>


    <string name="challenge">Reading Challenge %s</string>
    <string name="challenge_completed">Congratulations!</string>
    <string name="challenge_read">%s books read</string>
    <string name="challenge_year_percent">%s%% through year</string>
    <string name="challenge_days_remaining">%s days remaining</string>
    <string name="challenge_behind">%s books behind</string>
    <string name="challenge_ahead">%s books ahead</string>
    <string name="challenge_needed_daily">One book every %s days</string>
    <string name="challenge_needed_hourly">One book every %s hours</string>

    <string name="img_desc_book">Book cover</string>
    <string name="signing_in">Signing in</string>
    <string name="option_update">Update</string>
    <string name="option_add">Add to Shelf</string>
    <string name="favourite">Favourite</string>
    <string name="wishlist">Wishlist</string>
    <string name="reviewed">Reviewed</string>
    <string name="private_">Private</string>
    <string name="none">(None)</string>
    <string name="planning">Planning</string>
    <string name="reading">Reading</string>
    <string name="read">Read</string>
    <string name="all">All</string>
    <string name="planning_to_read">Planning to Read</string>
    <string name="currently_reading">Currently Reading</string>
    <string name="barcode">Scan Barcode</string>
    <string name="no_reading_challenges">User has no reading challenges</string>
    <string name="reading_challenge">Reading Challenge</string>
    <string name="shelves">Shelves</string>
    <string name="blog">Blog</string>
    <string name="search_books">Search Books</string>
    <string name="logout">Logout</string>
    <string name="manage_shelves">Manage Shelves</string>
    <string name="shelf_added">Shelf added!</string>
    <string name="update_failed">Update failed!</string>
    <string name="successfully_updated">Successfully updated!</string>
    <string name="new_shelf">New Shelf</string>
    <string name="auto_sort">Auto Sort</string>
    <string name="update_progress">Update Progress</string>
    <string name="add_to_shelf">Add to Shelf</string>


    <string-array name="book_formats">
        <item name="1">Paperback</item>
        <item name="2">Hardbook</item>
        <item name="3">Audiobook</item>
        <item name="4">Ebook</item>
        <item name="5">Mass Market Paperback</item>
        <item name="6">Kindle</item>
        <item name="7">MP3 CD</item>
        <item name="8">Library Binding</item>
        <item name="9">Board Book</item>
        <item name="10">Leather Bound</item>
        <item name="11">Online Only</item>
    </string-array>
</resources>
