<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single" android:id="@id/nav_group">
        <item android:id="@id/nav_blog" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/blog" />
        <item android:id="@id/nav_challenge" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/reading_challenge" />
        <item android:id="@id/nav_search" android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/search" />
        <item android:id="@id/nav_not_me"
            android:visible="false"
            android:title="" />
        <item android:id="@id/nav_shelves"
            android:title="@string/shelves">
            <menu></menu>
        </item>
        <!--
        <item android:id="@+id/nav_settings" android:icon="@android:drawable/ic_menu_edit"
            android:title="Settings" />
            -->
    </group>
    <item android:id="@id/nav_add_shelf" android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/add_shelf" />

    <item android:id="@id/nav_logout" android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/logout" />

</menu>